--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-ASSEMBLY_AI_KEY = ""
-OPEN_AI_KEY = ""
+ASSEMBLY_AI_KEY = "4e4fb7c0f72d43b2846eb79a61d7da28"
+OPEN_AI_KEY = "sk-proj-h3SAhPcKHzPclI6ICkkXT3BlbkFJrwCoYZ0C3NNEYSAC1Y4t"
